--- a/joinus.css
+++ b/joinus.css
@@ -1,9 +1,8 @@
-*{
-    box-sizing:border-box ;
-    margin:0;
+* {
+    box-sizing: border-box;
+    margin: 0;
     padding: 0;
-    font-family:  "Poppins", sans-serif;
-  
+    font-family: "Poppins", sans-serif;
 }
 
 .container {
@@ -11,85 +10,90 @@
     margin: 0 auto;
     padding: 0 20px;
 }
-li,a,button{
-    font-family:"Poppins",sans-serif;
+
+li, a, button {
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-size: 16px;
     color: black;
     text-decoration: none;
 }
 
-header{
-
+header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 30px 10%;
-
 }
-.logo{
-    cursor:pointer;
+
+.logo {
+    cursor: pointer;
     margin-right: auto;
-   
     height: 70px;
-
 }
-.navbar{
+
+.navbar {
     list-style: none;
 }
-.navbar li{
+
+.navbar li {
     display: inline-block;
-    padding: 0px 20px ;
+    padding: 0px 20px;
 }
-.navbar li:nth-child(1){
+
+.navbar li:nth-child(1) {
     padding: 0 20px 0 0;
 }
-.navbar li a{
-    transition: all 0.3s ease 0s;
 
+.navbar li a {
+    transition: all 0.3s ease 0s;
 }
-.navbar li a :hover{
-    color:black
-    
+
+.navbar li a:hover {
+    color: black;
 }
-button{
+
+button {
     margin-left: 20px;
     padding: 9px;
-    background-color: rgba(0,136,169,1);
-    border:none;
+    background-color: rgba(0, 136, 169, 1);
+    border: none;
     border-radius: 50px;
-    cursor:pointer ;
+    cursor: pointer;
     transition: all 0.3s ease 0s;
 }
-button:hover{
+
+button:hover {
     background-color: grey;
 }
-.content{
+
+.content {
     text-align: center;
 }
-.content h1{
-    font-size:100px ;
-    color:white;
+
+.content h1 {
+    font-size: 100px;
+    color: white;
     font-weight: 600;
     transition: 0.5s;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.content h1:hover{
-    -webkit-text-stroke: 2px #fff;
-    color:transparent;
 
+.content h1:hover {
+    -webkit-text-stroke: 2px #fff;
+    color: transparent;
 }
-section{
+
+section.starting {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #112;
     background: #112d42;
 }
-section::before{
 
+section.starting::before {
     content: '';
     position: absolute;
     top: 0;
@@ -97,111 +101,115 @@ section::before{
     width: 50%;
     height: 100%;
     background-color: #03a9f4;
-
 }
-section .container{
+
+section.starting .container {
     position: relative;
     min-width: 1100px;
     min-height: 550px;
     display: flex;
-    z-index:1000 ;
+    z-index: 1000;
 }
-section .container .contactinfo{
+
+section.starting .container .contactinfo {
     position: absolute;
-    top:40px;
-    width:350px ;
-    height: calc(100% -80px);
+    top: 40px;
+    width: 350px;
+    height: calc(100% - 80px);
     background: #0f3959;
-    z-index:1;
+    z-index: 1;
     page-break-after: 40px;
     padding: 40px;
     display: flex;
     flex-direction: column;
-    justify-self:space-between;
-    box-shadow: 0 20px 20px rgba(0,0,0,0.2);
+    justify-self: space-between;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
 }
-section .container .contactinfo h2{
+
+section.starting .container .contactinfo h2 {
     color: #fff;
     font-size: 24px;
     font-weight: 500;
 }
-section .container .contactinfo .info{
+
+section.starting .container .contactinfo .info {
     position: relative;
     margin: 20px 0;
 }
-section .container .contactinfo .info li{
+
+section.starting .container .contactinfo .info li {
     position: relative;
     list-style: none;
     display: flex;
     margin: 20px 0;
     cursor: pointer;
     align-items: flex-start;
-
-
 }
 
-section .container .contactinfo .info li span:nth-child(1){
-  width: 30px;
-  min-height: 30px;
-
+section.starting .container .contactinfo .info li span:nth-child(1) {
+    width: 30px;
+    min-height: 30px;
 }
-section .container .contactinfo .info li span:nth-child(1) img {
+
+section.starting .container .contactinfo .info li span:nth-child(1) img {
     max-width: 100%;
     filter: invert(1);
     opacity: 0.5;
 }
-section .container .contactinfo .info li span:nth-child(2){
-   color: #fff;
-   margin-left: 10px;
-   font-weight: 300;
-   opacity: 0.5;
-  }
 
-  section .container .contactinfo .info li:hover span:nth-child(1) img ,
-  section .container .contactinfo .info li:hover span:nth-child(2)
-  {
-    opacity: 1;
-  }
-  section .container .contactinfo .sci{
-    position: relative;
-    display: flex;
-  }
-section .container .contactinfo .sci li{
-    list-style: none;
-    margin-right: 15px ;
-
-}
-section .container .contactinfo .sci li a{
-    text-decoration: none;
-
-}
-section .container .contactinfo .sci li a img{
-    filter:invert(1);
+section.starting .container .contactinfo .info li span:nth-child(2) {
+    color: #fff;
+    margin-left: 10px;
+    font-weight: 300;
     opacity: 0.5;
 }
-section .container .contactinfo .sci li:hover a img{
-    
-    opacity: 1;
 
+section.starting .container .contactinfo .info li:hover span:nth-child(1) img,
+section.starting .container .contactinfo .info li:hover span:nth-child(2) {
+    opacity: 1;
 }
 
-section .container    .contactForm{
+section.starting .container .contactinfo .sci {
+    position: relative;
+    display: flex;
+}
+
+section.starting .container .contactinfo .sci li {
+    list-style: none;
+    margin-right: 15px;
+}
+
+section.starting .container .contactinfo .sci li a {
+    text-decoration: none;
+}
+
+section.starting .container .contactinfo .sci li a img {
+    filter: invert(1);
+    opacity: 0.5;
+}
+
+section.starting .container .contactinfo .sci li:hover a img {
+    opacity: 1;
+}
+
+section.starting .container .contactForm {
     position: absolute;
     padding: 70px 50px;
     background: #fff;
-    margin-left:150px ;
+    margin-left: 150px;
     padding-left: 250px;
-    width: calc(100% -150px);
+    width: calc(100% - 150px);
     height: 100%;
-    box-shadow: 0 50px 50px rgba(0,0,0,0.5);
+    box-shadow: 0 50px 50px rgba(0, 0, 0, 0.5);
 }
-section .container    .contactForm h2{
+
+section.starting .container .contactForm h2 {
     color: #0f3959;
     font-size: 24px;
     font-weight: 500;
 }
 
-section .container    .contactForm .formBox{
+section.starting .container .contactForm .formBox {
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -209,58 +217,77 @@ section .container    .contactForm .formBox{
     padding-top: 30px;
 }
 
-section .container    .contactForm .formBox .input-box{
+section.starting .container .contactForm .formBox .input-box {
     position: relative;
     margin: 0 0 35px 0;
 }
 
-section .container    .contactForm .formBox .input-box.w50{
-    width:47% ;
-
+section.starting .container .contactForm .formBox .input-box.w50 {
+    width: 47%;
 }
-section .container    .contactForm .formBox .input-box.w100{
-    width:100% ;
 
+section.starting .container .contactForm .formBox .input-box.w50 .h50 {
+    width: 47%;
+    height: 47%;
 }
-section .container    .contactForm .formBox .input-box input,
-section .container    .contactForm .formBox .input-box textarea{
-    width:100% !important;
+
+section.starting .container .contactForm .formBox .input-box.w100 {
+    width: 100%;
+}
+
+section.starting .container .contactForm .formBox .input-box input,
+section.starting .container .contactForm .formBox .input-box textarea {
+    width: 100% !important;
     padding: 5px 0;
     resize: none;
-  font-size: 18px;
-  font-weight: 300;
-  color: #333;
-  border: none;
-  border-bottom: 1px solid #777;
-  outline:none;   
+    font-size: 18px;
+    font-weight: 300;
+    color: #333;
+    border: none;
+    border-bottom: 1px solid #777;
+    outline: none;
 }
-section .container    .contactForm .formBox .input-box textarea{
+
+section.starting .container .contactForm .formBox .input-box textarea {
     min-height: 120px;
 }
-section .container    .contactForm .formBox .input-box span{
+
+section.starting .container .contactForm .formBox .input-box span {
     position: absolute;
     left: 0;
     padding: 5px 0;
     font-size: 18px;
     font-weight: 300;
     color: #333;
-    transition:0.5s ;
+    transition: 0.5s;
     pointer-events: none;
 }
-section .container    .contactForm .formBox .input-box input:focus~span,
-section .container    .contactForm .formBox .input-box textarea:focus~span,
-section .container    .contactForm .formBox .input-box input:valid~span,
-section .container    .contactForm .formBox .input-box textarea:valid~span{
-  transform: translateY(-20px);
-  font-size: 10px;
-  font-weight: 400;
-  letter-spacing: 1px;
-  color:palevioletred;
 
+section.starting .container .contactForm .formBox .input-box span #upload {
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    padding: 5px 0;
+    font-size: 18px;
+    font-weight: 300;
+    color: #333;
+    transition: 0.5s;
+    pointer-events: none;
 }
-section .container    .contactForm .formBox .input-box input[type="submit"]
-{
-    position:relative ;
+
+section.starting .container .contactForm .formBox .input-box input:focus~span,
+section.starting .container .contactForm .formBox .input-box textarea:focus~span,
+section.starting .container .contactForm .formBox .input-box input:valid~span,
+section.starting .container .contactForm .formBox .input-box textarea:valid~span {
+    transform: translateY(-20px);
+    font-size: 10px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: palevioletred;
+}
+
+section.starting .container .contactForm .formBox .input-box input[type="submit"] {
+    position: relative;
     cursor: pointer;
     background-color: #0f3959;
     color: #fff;
@@ -268,7 +295,75 @@ section .container    .contactForm .formBox .input-box input[type="submit"]
     max-width: 150px;
     padding: 12px;
 }
-section .container    .contactForm .formBox .input-box input[type="submit"]:hover{
-  background: palevioletred;
-  
+
+section.starting .container .contactForm .formBox .input-box input[type="submit"]:hover {
+    background: palevioletred;
 }
+
+section .openings h2{
+    font-family: "Poppins" sans-serif;
+    font-size: 200;
+    left:100px;
+
+
+}
+.accordion{
+    margin: 60px auto;
+    width: 100%;
+}
+
+.accordion li{
+     list-style: none;
+     width: 100%;
+     margin:20px 0;
+     padding: 10px;
+     border-radius: 8px;
+     background:#e3edf7 ;
+     box-shadow: 6px 6px 10px -1px rgba(0,0,0,0.15),
+                -6px -6px 10px -1px rgba(255,255,255,0.7);
+
+}
+
+
+.accordion li label{
+   display: flex;
+   align-items: center;
+   padding: 10px;
+   font-weight:500px ;
+   cursor: pointer;
+   font-size: 18px;
+}
+
+label::before{
+    content: '+';
+    margin-right:10px ;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+input[type="radio"]{
+    display: none;
+
+}
+
+.accordion .content{
+    color:#555;
+    padding: 0 10px;
+    line-height: 26px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.1s,padding 0.5s ;
+
+}
+.accordion input[type="radio"]:checked+label+ .content{
+    max-height: 400px;
+    padding:10px 10px 20px ;
+
+
+}
+
+.accordion input[type="radio"]:checked+label::before{
+    content: '-';
+
+}
+
