--- a/projects.css
+++ b/projects.css
@@ -190,3 +190,72 @@ input:checked+label .description{
     font-family:"Poppins", sans-serif;
     
 }
+
+.accordion{
+    margin: 60px auto;
+    width: 100%;
+}
+
+.accordion li{
+     list-style: none;
+     width: 100%;
+     margin:20px 0;
+     padding: 10px;
+     border-radius: 8px;
+     background:#e3edf7 ;
+     box-shadow: 6px 6px 10px -1px rgba(0,0,0,0.15),
+                -6px -6px 10px -1px rgba(255,255,255,0.7);
+
+}
+
+
+.accordion li label{
+   display: flex;
+   align-items: center;
+   padding: 10px;
+   font-weight:500px ;
+   cursor: pointer;
+   font-size: 18px;
+}
+
+label::before{
+    content: '+';
+    margin-right:10px ;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+input[type="radio"]{
+    display: none;
+
+}
+
+.accordion .content{
+    color:#555;
+    padding: 0 10px;
+    line-height: 26px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.1s,padding 0.5s ;
+
+}
+.accordion input[type="radio"]:checked+label+ .content{
+    max-height: 400px;
+    padding:10px 10px 20px ;
+
+
+}
+
+.accordion input[type="radio"]:checked+label::before{
+    content: '-';
+
+}
+.content p{
+    font-size: 20px;
+
+}
+#five label{
+    font-family: Amasis MT Pro;
+
+}
+
